src/objects/Partner_Company__c.object
<CustomObject>
    <fields>
        <fullName>Country_Headquarters__c</fullName>
        <label>Country (Headquarters)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Azores</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market Asia Pacific &amp; Japan</fullName>
                </value>
                <value>
                    <fullName>Market Middle East and Africa</fullName>
                </value>
                <value>
                    <fullName>Market Europe</fullName>
                </value>
                <value>
                    <fullName>Market Greater China</fullName>
                </value>
                <value>
                    <fullName>Market India</fullName>
                </value>
                <value>
                    <fullName>Market North America</fullName>
                </value>
                <value>
                    <fullName>Market Latin America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Companies</relationshipLabel>
        <relationshipName>Partner_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Indirect Reseller</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Value Added Reseller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Partner Company</label>
    <listViews>
        <fullName>Indirect_Reseller</fullName>
        <columns>NAME</columns>
        <columns>Country_Headquarters__c</columns>
        <columns>Market__c</columns>
        <columns>Partner_Name__c</columns>
        <columns>Partner_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Type__c</field>
            <operation>equals</operation>
            <value>Indirect Reseller</value>
        </filters>
        <label>Indirect Reseller Records</label>
    </listViews>
    <listViews>
        <fullName>Partner_Companies</fullName>
        <columns>NAME</columns>
        <columns>Partner_Name__c</columns>
        <columns>Partner_Type__c</columns>
        <columns>Country_Headquarters__c</columns>
        <columns>Market__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Partner Companies</label>
        <sharedTo>
            <group>PRM_PEM_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>